# rl-coach-agent

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  rxconfig.py
data/benchmarks/: pro_radiant_averages.json  pro_reference_data.json
data/benchmarks/2v2/: pro_reference_data.json
data/benchmarks/3v3/: pro_reference_data.json
rl_coach_agent/: rl_coach_agent.py
src/agents/: coach_logic.py
src/database/: check_stats.py  init_db.py  migrate_add_playlist_id.py  schema.sql  test_connection.py
src/tools/: fetch_pro_benchmarks.py  fetch_replays.py  replay_watcher.py
src/ui/: .gitignore
src/ui/ui/: __init__.py
